--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "antd": "^5.15.2",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "json-server": "^1.0.0-alpha.23",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
